--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,131 +1,112 @@
 @import '../variables';
 
-.button{
-    display: inline-block;
-    height: 48px;
-    font-size: 22px;
-    font-weight: 500;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color $duration ease-in-out, color $duration ease-in-out, border-color $duration ease-in-out;
+.button {
+  display: inline-block;
+  height: 48px;
+  font-size: 22px;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color $duration ease-in-out, color $duration ease-in-out, border-color $duration ease-in-out;
+  background-color: #ffffff;
+
+  &--search {
+    color: #118bf7;
+    border: 2px solid #118bf7;
+    padding: 0 34px;
+
+    &:hover {
+      background-color: #118bf7;
+      color: #ffffff;
+    }
+  }
+
+  &--add {
+    color: #8db264;
+    border: 2px solid #8db364;
+    padding: 0 48px;
+
+    &:hover {
+      background-color: #8db264;
+      color: #ffffff;
+      border-color: #8db264;
+    }
+  }
+
+  &--edit {
+    color: #118bf7;
+    border: 2px solid #4ea8f8;
+    padding: 0 28px;
+
+    &:hover {
+      background-color: #118bf7;
+      color: #ffffff;
+      border-color: #118bf7;
+    }
+  }
+
+  &--delete {
+    color: #e6527d;
+    border: 2px solid #f887a8;
+    padding: 0 30px;
+    margin-left: 4px;
+
+    &:hover {
+      background-color: #e6527d;
+      color: #ffffff;
+      border-color: #e6527d;
+    }
+  }
+
+  &--add-modal {
+    color: #ffffff;
+    background-color: #55a201;
+    padding: 0 48px;
+    border: 0;
+    margin-left: 10px;
+
+    &:hover {
+      background-color: darken($color: #55a201, $amount: 5);
+    }
+  }
+
+  &--cancel-modal {
+    color: #d2d2d2;
+    border: 2px solid #cecece;
     background-color: #ffffff;
+    padding: 0 48px;
 
-
-
-    &--search{
-        color: #118BF7;
-        border: 2px solid #118BF7;
-        padding: 0 34px;
-
-        &:hover{
-            background-color: #118BF7;
-            color: #ffffff;
-        }
+    &:hover {
+      background-color: darken($color: #ffffff, $amount: 15);
+      color: #6d6d6d;
     }
+  }
 
-
-
-    &--add{
-        color: #8DB264;
-        border: 2px solid #8DB364;
-        padding: 0 48px;
-
-        &:hover{
-            background-color: #8DB264;
-            color: #ffffff;
-            border-color: #8DB264;
-        }
+  @media screen and (max-width: 845px) {
+    &--add {
+      margin-top: 20px;
     }
+  }
 
-
-    &--edit{
-        color: #118BF7;
-        border: 2px solid #4EA8F8;
-        padding: 0 28px;
-        margin-top: 17px;
-
-        &--list{
-            margin-top: 0;
-        }
-
-        &:hover{
-            background-color: #118BF7;
-            color: #ffffff;
-            border-color: #118BF7;
-        }
+  @media screen and (max-width: 555px) {
+    &--search {
+      margin: 0 auto;
+      margin-top: 20px;
     }
+  }
 
-    &--delete{
-        color: #E6527D;
-        border: 2px solid #F887A8;
-        padding: 0 30px;
-        margin-top: 17px;
-        margin-left: 4px;
-
-        &--list{
-            margin-top: 0;
-        }
-
-        &:hover{
-            background-color: #E6527D;
-            color: #ffffff;
-            border-color: #E6527D;
-        }
+  @media screen and (max-width: 465px) {
+    &--edit {
+      font-size: 16px;
+      padding: 0 10px;
     }
-
-    &--add-modal{
-        color: #ffffff;
-        background-color: #55A201;
-        padding: 0 48px;
-        border: 0;
-        margin-left: 10px;
-
-        &:hover{
-            background-color: darken($color: #55A201, $amount: 5);     
-        }
+    &--delete {
+      font-size: 16px;
+      padding: 0 10px;
     }
-
-    &--cancel-modal{
-        color: #D2D2D2;
-        border: 2px solid #CECECE;
-        background-color: #ffffff;
-        padding: 0 48px;
-
-        &:hover{
-            background-color: darken($color: #ffffff, $amount: 15);   
-            color: #6d6d6d;
-        }
+    &--add-modal,
+    &--cancel-modal {
+      padding: 0 22px;
     }
-
-
-
-    @media screen and (max-width: 845px) {
-        &--add {
-            margin-top: 20px;
-        }
-        
-    }
-
-    @media screen and (max-width: 555px) {
-        &--search {
-            margin: 0 auto;
-            margin-top: 20px;
-        }
-    }
-
-
-    @media screen and (max-width: 465px) {
-        &--edit{
-            font-size: 16px;
-            padding: 0 10px;
-        }
-        &--delete{
-            font-size: 16px;
-            padding: 0 10px;
-        }
-        &--add-modal,&--cancel-modal{
-            padding: 0 22px;
-        }
-    }
-
+  }
 }
